# CasperID

./: .env.example  .gitignore  .netlifyignore  Dockerfile  FRONTEND.md  FRONTEND_TESTING.md  README.md  TESTING.md  TESTING_SUMMARY.md  analytics.md  check-db.js  clean-db.js  colors.md  datadog-dashboard.json  debug-casperid-error.md  netlify.toml  next.config.js  package-lock.json  package.json  railway.toml  setup.sh  tailwind.config.ts  test-casperid-mapping.js  verify-db.js
.github/workflows/: deploy.yml
app/: globals.css  layout.tsx  robots.ts  sitemap.ts
app/(landing-page)/: page.tsx  sticky-scroll.tsx
components/: asset-preloader.tsx  cns-claim.tsx  footer-marketing.tsx  footer.tsx  liveness-check.tsx  logo.tsx  profile-preview.tsx  scan-showcase.tsx  seo-profile-link.tsx
contracts/casper/contract/: Cargo.toml
contracts/casper/contract/src/: getrandom_shim.rs  lib.rs  main.rs
extension/: README.md  background.js  content.js  manifest.json  notifications.js  popup.html  popup.js
lib/: api-client.ts  casper-context.tsx  seo-utils.ts
public/: casperid-client.js  job-application-form.html  kyc-update-form.html  onboarding-form.html  payment-verification-form.html  test-form.html  travel-form.html
scripts/: traffic-generator.js
server/: .env.example  API_TESTING.md  DATADOG_AGENT_FIX.md  DATADOG_DAY5_WIDGETS.md  DATADOG_MONITORS.md  DATADOG_SETUP.md  DATADOG_VERIFY.md  Dockerfile  README.md  TESTING_GUIDE.md  datadog-dashboard.json  package-lock.json  package.json  railway.toml
test-website/: README.md  index.html
utils/: index.js  queries.js
(+87 files in other folders)
