[package]
name = "identity-registry-contract"
version = "1.0.0"
edition = "2021"

[dependencies]
casper-contract = "5.1.1"
casper-types = "6.0.1"
base64ct = "=1.6.0"

[dev-dependencies]
casper-engine-test-support = "6.0.0"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "identity_registry"
path = "src/main.rs"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
